syntax = "proto3";

package posts;

option go_package = "posts-api-service/proto";

service PostsService {
  rpc GetPost(GetPostRequest) returns (Post) {}
  
  rpc LikePost(LikePostRequest) returns (LikePostResponse) {}
  
  rpc CommentPost(CommentPostRequest) returns (Comment) {}
  
  rpc GetPostComments(GetPostCommentsRequest) returns (CommentsResponse) {}
}

message GetPostRequest {
  int64 id = 1;
}

message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 user_id = 4;
  string created_at = 5;
  int32 likes_count = 6;
  int32 comments_count = 7;
  int32 views_count = 8;
}

message LikePostRequest {
  int64 post_id = 1;
  int64 user_id = 2;
}

message LikePostResponse {
  bool success = 1;
}

message CommentPostRequest {
  int64 post_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message Comment {
  int64 id = 1;
  int64 post_id = 2;
  int64 user_id = 3;
  string content = 4;
  string created_at = 5;
}

message GetPostCommentsRequest {
  int64 post_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message CommentsResponse {
  repeated Comment comments = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
} 